--- a/hw-2/index.html
+++ b/hw-2/index.html
@@ -6,5 +6,7 @@
     <title>JS PRO</title>
     <script src="script.js" type="text/javascript"></script>
   </head>
-  <body></body>
+  <body>
+    
+  </body>
 </html>
