--- a/hw-6 (weatherstack)/index.html
+++ b/hw-6 (weatherstack)/index.html
@@ -8,9 +8,11 @@
   </head>
   <body>
       <header>
-        <input type="text" id="city" placeholder="City">
-        <input type="text" id="country" placeholder="Country">
-        <button id="button">Submit</button>
+          <form name="info">
+            <input type="text" name="city" placeholder="City">
+            <input type="text" name="country" placeholder="Country">
+            <button type=button action="#" id="button" onsubmit="return false">Submit</button>
+          </form>
       </header>
       <main>
           <p class="query">
